--- a/src/file.handle.fast.support/FastSupport.File.csproj
+++ b/src/file.handle.fast.support/FastSupport.File.csproj
@@ -1,20 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net48;net5.0;net6.0;net7.0</TargetFrameworks>
+        <TargetFrameworks>net48;net6.0;net7.0;netstandard2.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>FastSupport.File</RootNamespace>
         <AssemblyName>fastSupport.file</AssemblyName>
         <LangVersion>Latest</LangVersion>
+        <Version>1.0.2</Version>
+        
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="GitVersion.MsBuild" Version="6.3.0">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-    </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
