added class/entity fast ser/des

--- a/src/file.handle.fast.support/FastSupport.File.csproj
+++ b/src/file.handle.fast.support/FastSupport.File.csproj
@@ -7,7 +7,7 @@
         <RootNamespace>FastSupport.File</RootNamespace>
         <AssemblyName>fastSupport.file</AssemblyName>
         <LangVersion>Latest</LangVersion>
-        <Version>1.0.2</Version>
+        <Version>1.0.2-beta1</Version>
         
     </PropertyGroup>
 
