diff to two project

--- a/src/Tests/Manuals/FastSupport.File.DictionaryHandler/FastSupport.File.DictionaryHandler.csproj
+++ b/src/Tests/Manuals/FastSupport.File.DictionaryHandler/FastSupport.File.DictionaryHandler.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\FastSupport.Dictionary\FastSupport.Dictionary.csproj" />
+    <ProjectReference Include="..\..\..\FastSupport.Dictionary\FastSupport.Dictionary.csproj" />
     <ProjectReference Include="..\..\..\file.handle.fast.support\FastSupport.File.csproj" />
   </ItemGroup>
 
