--- a/src/FastSupport.Dictionary/FastSupport.Dictionary.csproj
+++ b/src/FastSupport.Dictionary/FastSupport.Dictionary.csproj
@@ -4,8 +4,8 @@
         <TargetFrameworks>net48;net6.0;net7.0;netstandard2.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>FastSupport.File</RootNamespace>
-        <AssemblyName>fastSupport.file</AssemblyName>
+        <RootNamespace>FastSupport.Dictionary</RootNamespace>
+        <AssemblyName>fastSupport.dictionary</AssemblyName>
         <LangVersion>Latest</LangVersion>
         <Version>1.0.2-beta1</Version>
     </PropertyGroup>
